--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+/* HTML: <div class="trapezoid"></div> */
+.trapezoid {
+  --p: 30px; /* control the shape (can be percentage) */;
+  clip-path: polygon(var(--p) 100%,calc(100% - var(--p)) 100%,100% 0,0 0);
+  @apply h-20 bg-accent aspect-[2];
+}
