--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,9 +3,14 @@
 @tailwind utilities;
 
 
-/* HTML: <div class="trapezoid"></div> */
 .trapezoid {
-  --p: 30px; /* control the shape (can be percentage) */;
+  --p: 30px;
   clip-path: polygon(var(--p) 100%,calc(100% - var(--p)) 100%,100% 0,0 0);
   @apply h-20 bg-accent aspect-[2];
+}
+
+.parallelogram {
+  --p: 11px;
+  clip-path: polygon(var(--p) 0,100% 0,calc(100% - var(--p)) 100%,0 100%);
+  @apply h-full bg-yellow-500 aspect-[4] flex justify-center items-center text-lg font-extrabold ml-4 uppercase
 }
